2003-05-19  Derek Price  <derek@ximbiot.com>

	* filesubr.c: s/\bstat\b/CVS_STAT/g;s/\blstat\b/CVS_LSTAT/g
	* hardlink.c: Ditto.
	* ignore.c: Ditto.
	* rcs.c: Ditto.
	* update.c: Ditto.

2003-05-18  Larry Jones  <lawrence.jones@eds.com>

	* checkout.c (safe_location): Remove unused variable.
	* hash.c (walklist, printnode, printlist): Use %p to print pointers
	if available, convert to unsigned long if not.
	* recurse.c (start_recursion, do_recursion): Ditto.
	* tag.c (rtag_proc, tag_check_valid): Ditto.

2003-05-18  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.am (localcheck,remotecheck): Use cvs$(EXEEXT) not cvs.
	* Makefile.in: Regenerated.
	* sanity.sh (status-init-7): Use ${PROG} not cvs in tests.
	(branch-after-import-5): Ditto.
	(keywordname-update-11): Ditto.

2003-05-18  Larry Jones  <lawrence.jones@eds.com>

	* server.h (kserver_authenticate_connection,
	pserver_authenticate_connection): Add prototypes.

	* client.c (update_entries): Set file's access time to the current
	time rather than the same as the modification time.
	* vers_ts.c (Version_TS): Ditto.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* client.c: #ifdef inclusion of gssapi-client.h.
	* server.c: Ditto.
	(Reported by Boyd Lynn Gerber <gerberb@zenez.com>.)

2003-05-09  Derek Price  <derek@ximbiot.com>

	* client.h: Move some of the GSSAPI stuff...
	* gssapi-client.h: ...to this new file.
	* client.c (start_server): Use new initialize_gssapi_buffers().
	(*): Move most of the GSSAPI stuff from here and...
	* server.c (*): ...here...
	* gssapi-client.c: ...to this new file.
	* Makefile.am (EXTRA_cvs_SOURCES, cvs_DEPENDENCIES, cvs_LDADD): Support
	$(cvs_client_objects).
	(Original patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* Makefile.in: Regenerated.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* buffer.c: Reindent some compiler directives in order to make nesting
	clearer.

2003-05-08  Derek Price  <derek@ximbiot.com>

	* client.c (log_buffer*): Move...