@@ -1,3 +1,8 @@
+2003-05-20  Derek Price  <derek@ximbiot.com>
+
+	* cvs.h: Move the standard includes into lib/system.h.
+	* subr.c: s/malloc/CVS_MALLOC/;s/realloc/CVS_REALLOC/.
+
 2003-05-19  Derek Price  <derek@ximbiot.com>
 
 	* filesubr.c: s/\bstat\b/CVS_STAT/g;s/\blstat\b/CVS_LSTAT/g
